@@ -64,7 +64,8 @@ public interface HBaseRPCProtocolVersion extends VersionedProtocol {
    * <li>Version 12: HServerLoad extensions (HBASE-1018).</li>
    * <li>Version 13: HBASE-847</li>
    * <li>Version 14: HBASE-900</li>
+   * <li>Version 15: HRegionInterface.exists</li>
    * </ul>
    */
-  public static final long versionID = 14L;
+  public static final long versionID = 15L;
 }
